--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   shared_preferences: 2.0.15
   timeago: 3.2.2
   url_launcher: 6.1.5
- 
+  easy_image_viewer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
