--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,14 @@ dependencies:
   intl: 0.17.0
   json_path: 0.4.1
   page_transition: 2.0.4
-  shared_preferences: 2.0.15
   timeago: 3.2.2
   url_launcher: 6.1.5
   easy_image_viewer: ^1.1.0
   flutter_bloc: ^8.1.1
+  http: ^0.13.0
+  shared_preferences: ^2.0.17
+  provider: ^6.0.0 
+  persistent_bottom_nav_bar: 5.0.2 
 
 dev_dependencies:
   flutter_test:
