--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   font_awesome_flutter: 10.1.0
   from_css_color: 2.0.0
   google_fonts: 3.0.1
-  intl: 0.17.0
   json_path: 0.4.1
   page_transition: 2.0.4
   timeago: 3.2.2
@@ -56,6 +55,9 @@ dependencies:
   shared_preferences: ^2.0.17
   provider: ^6.0.0 
   persistent_bottom_nav_bar: 5.0.2 
+  sqflite: ^2.2.4+1
+  intl: ^0.18.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
@@ -84,7 +86,7 @@ flutter:
     - data/data.json
     - data/brand-data.json
     - assets/ktm/
-
+    - data/data.db
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
